# knucleotide

./: README.md  fasta.ghc-2.hs  knucleotide.cabal  run.sh  stack.yaml
src/: KnucleotideNew.hs  KnucleotideOld.hs  Main.hs
