name:                   knucleotide
version:                0.1.0.0
-- synopsis:
-- description:
homepage:               https://github.com/githubuser/knucleotide#readme
license:                BSD3
license-file:           LICENSE
author:                 Author name here
maintainer:             example@example.com
copyright:              2017 Author name here
category:               Web
build-type:             Simple
cabal-version:          >=1.10
extra-source-files:     README.md

executable knucleotide
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        KnucleotideOld
                      , KnucleotideNew
  default-language:     Haskell2010
  default-extensions:   ScopedTypeVariables
                      , BangPatterns
  ghc-options:          -fllvm -O2 -threaded -fprof-auto -rtsopts -funbox-strict-fields
  build-depends:        base >= 4.7 && < 5
                      , bytestring
                      , hashable
                      , containers
                      , unordered-containers
                      , parallel
                      , hashtables
                      , async
